# needle

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: benchmarks.rs  boyer_moore.rs  boyer_moore_memchr.rs  horspool.rs  horspool_memchr.rs  lib.rs  memchr_search.rs  memchr_skip_back.rs  naive.rs  naive_search.rs  skip_search.rs  tests.rs  traits.rs
src/benchmarks/: alice.rs  mod.rs  pi_digits.rs
