[package]
name = "needle"
version = "0.1.2"
authors = ["Peter Hall"]
repository = "https://github.com/peterjoel/needle"
readme = "README.md"
keywords = ["search", "find", "boyer", "moore", "horspool"]
license = "MIT"
description = "Fast search functions for finding things in Strings, Arrays and iterators."

[dependencies]
memchr = "0.1.11"
log = "0.3.6"